--- a/JL.Web.Forms.Contrib/JL.Web.Forms.Contrib.csproj
+++ b/JL.Web.Forms.Contrib/JL.Web.Forms.Contrib.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>JL.Web.Forms.Contrib</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>JL.Web.Forms.Contrib.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
