- Added new HtmlHelper to automatically select the correct PartialView for rendering a form. - Updated example project to demo new feature.

--- a/JL.Web.Forms/JL.Web.Forms.csproj
+++ b/JL.Web.Forms/JL.Web.Forms.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Forms\Fields\CollectionField.cs" />
     <Compile Include="Forms\Html\HtmlHelperExtensions.cs" />
     <Compile Include="Forms\ICollectionWidget.cs" />
+    <Compile Include="Forms\UsePartialViewAttribute.cs" />
     <Compile Include="Forms\Utils\ConfigurationHelper.cs" />
     <Compile Include="Forms\Utils\ReadOnlyDictionary.cs" />
     <Compile Include="Forms\Utils\ConversionHelper.cs" />
