--- a/MvcExample/Web.config
+++ b/MvcExample/Web.config
@@ -20,11 +20,24 @@
 				</sectionGroup>
 			</sectionGroup>
 		</sectionGroup>
+		<sectionGroup name="jl.web.forms">
+			<section name="forms" type="JL.Web.Forms.Configuration.FormsSection, JL.Web.Forms" />
+			<section name="fields" type="JL.Web.Forms.Configuration.FieldsSection, JL.Web.Forms" />
+		</sectionGroup>
 	</configSections>
 	<appSettings/>
 	<connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
+
+	<!-- Configuration for JL.Web.Forms -->
+	<jl.web.forms>
+		<forms defaultRenderLayout="Table" />
+		<fields>
+			<urlField userAgent="Test" />
+		</fields>
+	</jl.web.forms>
+	
 	<system.web>
 		<!-- 
             Set compilation debug="true" to insert debugging 
