--- a/MvcExample/MvcExample.csproj
+++ b/MvcExample/MvcExample.csproj
@@ -72,6 +72,7 @@
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Binder\FormFilteredModelBinder.cs" />
     <Compile Include="Forms\ContactForm.cs" />
     <Compile Include="Forms\Contrib\JQueryUIForm.cs" />
     <Compile Include="Forms\ExampleChoices.cs" />
@@ -82,7 +83,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Binder\IFilteredModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Binder\SmartModelBinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
