--- a/MvcForms/MvcForms.csproj
+++ b/MvcForms/MvcForms.csproj
@@ -66,6 +66,9 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\GlobalAssemblyInfo.cs">
@@ -84,10 +87,12 @@
     <Compile Include="Forms\Extensions\ObjectExtensions.cs" />
     <Compile Include="Forms\Fields\CollectionField.cs" />
     <Compile Include="Forms\Configuration\MvcForms.cs" />
+    <Compile Include="Forms\Fields\HtmlStringField.cs" />
     <Compile Include="Forms\FormModelBinder.cs" />
     <Compile Include="Forms\Html\HtmlHelperExtensions.cs" />
     <Compile Include="Forms\ICollectionWidget.cs" />
     <Compile Include="Forms\UsePartialViewAttribute.cs" />
+    <Compile Include="Forms\UseResourcesAttribute.cs" />
     <Compile Include="Forms\Utils\ConfigurationHelper.cs" />
     <Compile Include="Forms\Utils\ReadOnlyDictionary.cs" />
     <Compile Include="Forms\Utils\ConversionHelper.cs" />
